--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:sass": "sass --no-source-map styles/sass:styles"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
